syntax = "proto3";

package order;
option go_package = "internal/order/delivery/grpc/order-service/proto;order";

service OrderService {
  rpc ListOrders (Empty) returns (OrderListResponse);
}

message Empty {}

message Order {
  int32 id = 1;
  string customer_name = 2;
  double total = 3;
  string created_at = 4;
}

message OrderListResponse {
  repeated Order orders = 1;
}